# libpacstall

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE_BOILERPLATE  README.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: CI.yml  codacy-coverage-reporter.yml  codeql-analysis.yml  tests.yml
benches/: parser.rs
examples/: parser.rs  store_crud.rs
libpacstall/: __init__.py  cache.py  config.py
libpacstall/config/: validator.py
proptest-regressions/parser/: pacbuild.txt
src/: config.rs  lib.rs  model.rs  store.rs
src/model/: mod.rs  pacbuild.rs  repository.rs
src/parser/: errors.rs  mod.rs  pacbuild.rs
src/store/: base.rs  error.rs  errors.rs  filesystem.rs  filters.rs  fs.rs  mod.rs  query_builder.rs  storable.rs
tests/: test_cache.py  test_config_parser.py
