[package]
name = "libpacstall"
version = "0.1.0"
edition = "2021"
authors = [
    "Sourajyoti Basak <wiz28@protonmail.com>",
    "David Brochero <davidfbg00@gmail.com>",
    "Paul Cosma <paul.cosma97@gmail.com>"
]
description = "Backend API library for Pacstall"
repository = "https://github.com/pacstall/libpacstall"
license = "GPL-3.0-or-later"
keywords = ["aur", "pacstall", "package-manager", "linux", "apt"]
categories = ["caching", "config", "parsing", "os::linux-apis"]

[dependencies]
error-stack = "0.2.3"
figment = { version = "0.10.6", features = ["env", "test", "toml" ] }
num_cpus = "1.13.1"
serde = { version = "1.0.144", features = ["derive"] }
spdx = "0.9.0"
thiserror = "1.0.37"
tree-sitter = "0.19"
tree-sitter-bash = "0.19.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
rstest = "0.15.0"

[[bench]]
name = "parser"
harness = false
